--- a/substrate/frame/staking-async/runtimes/parachain/Cargo.toml
+++ b/substrate/frame/staking-async/runtimes/parachain/Cargo.toml
@@ -381,4 +381,8 @@ metadata-hash = ["substrate-wasm-builder/metadata-hash"]
 on-chain-release-build = ["metadata-hash"]
 
 [package.metadata.cargo-udeps.ignore]
-development = ["asset-test-utils", "pallet-bags-list-remote-tests", "parachains-runtimes-test-utils"]
+development = [
+	"asset-test-utils",
+	"pallet-bags-list-remote-tests",
+	"parachains-runtimes-test-utils",
+]
