--- a/Plan.toml
+++ b/Plan.toml
@@ -1404,9 +1404,9 @@ reason = "changed"
 [[crate]]
 # substrate/frame/balances
 name = "pallet-balances"
-from = "42.0.0"
-to = "43.0.0"
-bump = "major"
+from = "43.0.0"
+to = "43.0.1"
+bump = "patch"
 reason = "changed"
 
 [[crate]]
