Pallet revive benchmarks (#9496)
## Enhanced finalize_block benchmarking with comprehensive weight
accounting

This PR introduces sophisticated benchmarking infrastructure for
`pallet-revive`'s block finalization logic, implementing a
multi-dimensional weight accounting system that
accurately measures all costs associated with Ethereum-style block
processing.

  ### Key Improvements

  **🏗️ Comprehensive benchmarking infrastructure**
  - **Two dedicated benchmark functions**:
- `on_finalize(n, p)` - Measures the cost of adding transactions to a
block during finalization
- `on_finalize_per_event(e)` - Measures the per-event processing
overhead during finalization
- `on_finalize_per_event_data(d)` - Measures the per-byte event data
processing overhead during finalization
 
  **⚖️ Multi-dimensional weight model**
```text
Total Weight = fixed_part + Σ(per_tx_part(payload_i)) + Σ(per_event_part(data_len_j))
```

- Fixed costs: Block initialization overhead, storage cleanup, base
finalization logic
- Per-transaction costs: Transaction processing, receipt generation, gas
accounting
  - Per-event costs: Event filtering, log creation, bloom filter updates

---------

Co-authored-by: cmd[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/substrate/frame/revive/rpc/Cargo.toml
+++ b/substrate/frame/revive/rpc/Cargo.toml
@@ -17,6 +17,8 @@ name = "eth-rpc"
 path = "src/main.rs"
 
 [dependencies]
+alloy-consensus = { workspace = true, default-features = false }
+alloy-core = { workspace = true, features = ["sol-types"] }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"] }
 codec = { workspace = true, features = ["derive"] }
@@ -31,6 +33,7 @@ sc-cli = { workspace = true, default-features = true }
 sc-rpc = { workspace = true, default-features = true }
 sc-rpc-api = { workspace = true, default-features = true }
 sc-service = { workspace = true, default-features = true }
+serde = { workspace = true, default-features = false, features = ["alloc", "derive"] }
 serde_json = { workspace = true }
 sp-arithmetic = { workspace = true, default-features = true }
 sp-core = { workspace = true, default-features = true }
