--- a/umbrella/Cargo.toml
+++ b/umbrella/Cargo.toml
@@ -532,13 +532,14 @@ experimental = [
 	"frame-system?/experimental",
 	"polkadot-sdk-frame?/experimental",
 ]
+
 with-tracing = [
 	"frame-executive?/with-tracing",
-	"frame-executive?/with-tracing",
+
 	"sp-io?/with-tracing",
-	"sp-io?/with-tracing",
+
 	"sp-tracing?/with-tracing",
-	"sp-tracing?/with-tracing",
+
 ]
 runtime-full = [
 	"assets-common",
@@ -988,6 +989,11 @@ tuples-96 = [
 	"frame-support?/tuples-96",
 ]
 
+doppelganger = [
+	"polkadot-cli/doppelganger",
+	"polkadot-omni-node-lib/doppelganger",
+]
+
 [package.edition]
 workspace = true
 
@@ -999,6 +1005,11 @@ workspace = true
 
 [package.repository]
 workspace = true
+
+[dependencies.doppelganger]
+default-features = false
+optional = false
+path = "../doppelganger"
 
 [dependencies.assets-common]
 default-features = false
