feat: extraction via inherent first impl

--- a/cumulus/client/parachain-inherent/Cargo.toml
+++ b/cumulus/client/parachain-inherent/Cargo.toml
@@ -19,6 +19,8 @@ cumulus-relay-chain-interface.default-features = true
 cumulus-relay-chain-interface.workspace = true
 cumulus-test-relay-sproof-builder.default-features = true
 cumulus-test-relay-sproof-builder.workspace = true
+polkadot-runtime-parachains.default-features = true
+polkadot-runtime-parachains.workspace = true
 sc-client-api.default-features = true
 sc-client-api.workspace = true
 sc-consensus-babe.default-features = true
