--- a/cumulus/test/runtime/Cargo.toml
+++ b/cumulus/test/runtime/Cargo.toml
@@ -107,3 +107,5 @@ experimental-ump-signals = [
 ]
 # A runtime with 12s slot duration which only authors one block per slot.
 sync-backing = []
+# A runtime with 6s slot duration which only authors one block per slot.
+async-backing = []
