add sync backing test
Signed-off-by: Andrei Sandu <andrei-mihail@parity.io>

--- a/cumulus/test/runtime/Cargo.toml
+++ b/cumulus/test/runtime/Cargo.toml
@@ -109,3 +109,5 @@ experimental-ump-signals = [
 sync-backing = []
 # A runtime with 6s slot duration which only authors one block per slot.
 async-backing = []
+# An elastic scaling runtime with 12s slots.
+elastic-scaling-12s-slot = []
