--- a/.github/zombienet-tests/zombienet_cumulus_tests.yml
+++ b/.github/zombienet-tests/zombienet_cumulus_tests.yml
@@ -79,3 +79,9 @@
   runner-type: "large"
   cumulus-image: "test-parachain"
   use-zombienet-sdk: true
+
+- job-name: "zombienet-cumulus-0014-elastic_scaling_slot_based_rp_offset"
+  test-filter: "zombie_ci::elastic_scaling::upgrade_to_3_cores::elastic_scaling_upgrade_to_3_cores"
+  runner-type: "large"
+  cumulus-image: "test-parachain"
+  use-zombienet-sdk: true
