--- a/Plan.toml
+++ b/Plan.toml
@@ -2622,8 +2622,8 @@ reason = "changed"
 [[crate]]
 # polkadot/xcm/pallet-xcm
 name = "pallet-xcm"
-from = "19.2.0"
-to = "19.2.1"
+from = "19.2.1"
+to = "19.2.2"
 bump = "patch"
 reason = "changed"
 
@@ -2986,9 +2986,9 @@ reason = "changed"
 [[crate]]
 # polkadot/runtime/rococo
 name = "rococo-runtime"
-from = "22.1.0"
-to = "23.0.0"
-bump = "major"
+from = "23.0.0"
+to = "23.0.1"
+bump = "patch"
 reason = "changed"
 
 [[crate]]
@@ -3072,9 +3072,9 @@ reason = "changed"
 [[crate]]
 # polkadot/runtime/westend
 name = "westend-runtime"
-from = "22.3.0"
-to = "23.0.0"
-bump = "major"
+from = "23.0.0"
+to = "23.0.1"
+bump = "patch"
 reason = "changed"
 
 [[crate]]
@@ -3322,25 +3322,25 @@ reason = "changed"
 [[crate]]
 # cumulus/parachains/runtimes/assets/asset-hub-rococo
 name = "asset-hub-rococo-runtime"
-from = "0.25.2"
-to = "0.25.3"
+from = "0.25.3"
+to = "0.25.4"
 bump = "patch"
 reason = "changed"
 
 [[crate]]
 # cumulus/parachains/runtimes/assets/asset-hub-westend
 name = "asset-hub-westend-runtime"
-from = "0.31.0"
-to = "0.31.1"
+from = "0.31.1"
+to = "0.31.2"
 bump = "patch"
 reason = "changed"
 
 [[crate]]
 # cumulus/parachains/runtimes/assets/test-utils
 name = "asset-test-utils"
-from = "21.0.1"
-to = "23.0.0"
-bump = "major"
+from = "23.0.0"
+to = "23.0.1"
+bump = "patch"
 reason = "changed"
 
 [[crate]]
