--- a/polkadot/runtime/westend/Cargo.toml
+++ b/polkadot/runtime/westend/Cargo.toml
@@ -124,8 +124,8 @@ sp-tracing = { default-features = false, workspace = true }
 tokio = { features = ["macros"], workspace = true, default-features = true }
 
 [build-dependencies]
-substrate-wasm-builder.workspace = true
 substrate-wasm-builder.default-features = true
+substrate-wasm-builder.workspace = true
 
 [features]
 default = ["std"]
@@ -224,6 +224,7 @@ std = [
 	"sp-session/std",
 	"sp-staking/std",
 	"sp-storage/std",
+	"sp-tracing/std",
 	"sp-transaction-pool/std",
 	"sp-version/std",
 	"westend-runtime-constants/std",
@@ -231,7 +232,6 @@ std = [
 	"xcm-executor/std",
 	"xcm-runtime-apis/std",
 	"xcm/std",
-	"sp-tracing/std"
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
