ext: accuracy test added

--- a/substrate/primitives/state-machine/Cargo.toml
+++ b/substrate/primitives/state-machine/Cargo.toml
@@ -42,6 +42,7 @@ assert_matches = { workspace = true }
 pretty_assertions = { workspace = true }
 rand = { workspace = true, default-features = true }
 sp-runtime = { workspace = true, default-features = true }
+sp-tracing = { workspace = true }
 
 [features]
 default = ["std"]
