--- a/substrate/frame/assets-precompiles/Cargo.toml
+++ b/substrate/frame/assets-precompiles/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-name = "pallet-assets"
-version = "29.1.0"
+name = "pallet-assets-precompiles"
+version = "0.1.0"
 authors.workspace = true
 edition.workspace = true
 license = "Apache-2.0"
 homepage.workspace = true
 repository.workspace = true
-description = "FRAME asset management pallet"
-readme = "README.md"
+description = "Provides precompiles for `pallet-assets`"
 
 [lints]
 workspace = true
@@ -17,46 +16,44 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { workspace = true }
-impl-trait-for-tuples = { workspace = true }
-log = { workspace = true }
-scale-info = { features = ["derive"], workspace = true }
-# Needed for various traits. In our case, `OnFinalize`.
-sp-runtime = { workspace = true }
-# Needed for type-safe access to storage DB.
+ethereum-standards = { workspace = true }
 frame-support = { workspace = true }
-# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
-frame-benchmarking = { optional = true, workspace = true }
 frame-system = { workspace = true }
-sp-core = { workspace = true }
+pallet-assets = { workspace = true }
+pallet-revive = { workspace = true }
+scale-info = { workspace = true }
+sp-runtime = { workspace = true }
 
 [dev-dependencies]
-pallet-balances = { workspace = true, default-features = true }
-sp-io = { workspace = true, default-features = true }
+pallet-balances = { workspace = true }
+sp-core = { workspace = true }
+sp-io = { workspace = true }
 
 [features]
 default = ["std"]
 std = [
 	"codec/std",
-	"frame-benchmarking?/std",
 	"frame-support/std",
 	"frame-system/std",
-	"log/std",
+	"pallet-assets/std",
 	"pallet-balances/std",
+	"pallet-revive/std",
 	"scale-info/std",
 	"sp-core/std",
 	"sp-io/std",
 	"sp-runtime/std",
 ]
 runtime-benchmarks = [
-	"frame-benchmarking/runtime-benchmarks",
 	"frame-support/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
+	"pallet-assets/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 ]
 try-runtime = [
 	"frame-support/try-runtime",
 	"frame-system/try-runtime",
+	"pallet-assets/try-runtime",
 	"pallet-balances/try-runtime",
 	"sp-runtime/try-runtime",
 ]
