--- a/substrate/client/consensus/manual-seal/Cargo.toml
+++ b/substrate/client/consensus/manual-seal/Cargo.toml
@@ -39,9 +39,11 @@ sp-consensus-aura = { workspace = true, default-features = true }
 sp-consensus-babe = { workspace = true, default-features = true }
 sp-consensus-slots = { workspace = true, default-features = true }
 sp-core = { workspace = true, default-features = true }
+sp-externalities = { workspace = true, default-features = true }
 sp-inherents = { workspace = true, default-features = true }
 sp-keystore = { workspace = true, default-features = true }
 sp-runtime = { workspace = true, default-features = true }
+sp-trie = { workspace = true, default-features = true }
 sp-timestamp = { workspace = true, default-features = true }
 thiserror = { workspace = true }
 
