--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1406,6 +1406,7 @@ syn = { version = "2.0.87" }
 sysinfo = { version = "0.30" }
 tar = { version = "0.4" }
 tempfile = { version = "3.8.1" }
+# pinned test-case to 3.3.1 because they support only the latest stable version of rust
 test-case = { version = "=3.3.1" }
 test-log = { version = "0.2.14" }
 test-pallet = { path = "substrate/frame/support/test/pallet", default-features = false, package = "frame-support-test-pallet" }
