--- a/substrate/frame/revive/rpc/Cargo.toml
+++ b/substrate/frame/revive/rpc/Cargo.toml
@@ -53,3 +53,6 @@ substrate-cli-test-utils = { workspace = true }
 
 [build-dependencies]
 git2 = { workspace = true }
+asset-hub-westend-runtime = { workspace = true }
+parachains-runtimes-test-utils = { workspace = true }
+sp-runtime = { workspace = true, default-features = true }
