--- a/Cargo.toml
+++ b/Cargo.toml
@@ -674,8 +674,7 @@ binary-merkle-tree = { path = "substrate/utils/binary-merkle-tree", default-feat
 bincode = { version = "1.3.3" }
 ethereum-standards = { path = "substrate/primitives/ethereum-standards" }
 pallet-ah-ops = { path = "cumulus/pallets/ah-ops", default-features = false }
-# personal fork here as workaround for: https://github.com/rust-bitcoin/rust-bip39/pull/64
-bip39 = { package = "parity-bip39", version = "2.0.1", default-features = false }
+bip39 = { version = "2.2.0", default-features = false }
 bitflags = { version = "1.3.2" }
 bitvec = { version = "1.0.1", default-features = false }
 blake2 = { version = "0.10.4", default-features = false }
