--- a/substrate/frame/assets/precompiles/Cargo.toml
+++ b/substrate/frame/assets/precompiles/Cargo.toml
@@ -32,11 +32,13 @@ sp-runtime = { workspace = true }
 [features]
 default = ["std"]
 std = [
+	"codec/std",
 	"frame-support/std",
 	"frame-system/std",
 	"pallet-assets/std",
 	"pallet-balances/std",
 	"pallet-revive/std",
+	"scale-info/std",
 	"sp-core/std",
 	"sp-io/std",
 	"sp-runtime/std",
