Add statement store benchmarks

--- a/substrate/client/statement-store/Cargo.toml
+++ b/substrate/client/statement-store/Cargo.toml
@@ -32,3 +32,9 @@ tokio = { features = ["time"], workspace = true, default-features = true }
 [dev-dependencies]
 sp-tracing = { workspace = true }
 tempfile = { workspace = true }
+criterion = { workspace = true, default-features = true }
+
+[[bench]]
+name = "statement_store"
+harness = false
+required-features = []
