--- a/substrate/frame/revive/rpc/Cargo.toml
+++ b/substrate/frame/revive/rpc/Cargo.toml
@@ -39,7 +39,7 @@ sp-rpc = { workspace = true, default-features = true }
 sp-runtime = { workspace = true, default-features = true }
 sp-weights = { workspace = true, default-features = true }
 sqlx = { workspace = true, features = ["macros", "runtime-tokio", "sqlite"] }
-subxt = { workspace = true, default-features = true, features = ["reconnecting-rpc-client"] }
+subxt = { workspace = true, default-features = true, features = ["reconnecting-rpc-client", "runtime-wasm-path"] }
 subxt-signer = { workspace = true, features = ["unstable-eth"] }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
@@ -52,7 +52,5 @@ static_init = { workspace = true }
 substrate-cli-test-utils = { workspace = true }
 
 [build-dependencies]
-asset-hub-westend-runtime = { workspace = true }
 git2 = { workspace = true }
-parachains-runtimes-test-utils = { workspace = true }
-sp-runtime = { workspace = true, default-features = true }
+substrate-wasm-builder = { workspace = true }
