--- a/substrate/frame/revive/rpc/Cargo.toml
+++ b/substrate/frame/revive/rpc/Cargo.toml
@@ -12,6 +12,9 @@ default-run = "eth-rpc"
 [lints]
 workspace = true
 
+[package.metadata.polkadot-sdk]
+exclude-from-umbrella = true
+
 [[bin]]
 name = "eth-rpc"
 path = "src/main.rs"
@@ -52,5 +55,5 @@ static_init = { workspace = true }
 substrate-cli-test-utils = { workspace = true }
 
 [build-dependencies]
-asset-hub-westend-runtime = { workspace = true, default-features = true }
 git2 = { workspace = true }
+revive-dev-runtime = { workspace = true, default-features = true }
