--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -31,6 +31,7 @@ jobs:
     env:
       RUSTFLAGS: "-D warnings"
       SKIP_WASM_BUILD: 1
+      FORCE_REVIVE_DEV_RUNTIME_WASM_BUILD: 1
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v4.1.7
       - name: script
