--- a/cumulus/parachains/runtimes/testing/yet-another-parachain/Cargo.toml
+++ b/cumulus/parachains/runtimes/testing/yet-another-parachain/Cargo.toml
@@ -52,6 +52,7 @@ polkadot-sdk = { workspace = true, default-features = false, features = [
 
 # Cumulus
 cumulus-pallet-parachain-system = { workspace = true }
+cumulus-tic-tac-toe = { workspace = true }
 
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
@@ -61,6 +62,7 @@ default = ["std"]
 std = [
 	"codec/std",
 	"cumulus-pallet-parachain-system/std",
+	"cumulus-tic-tac-toe/std",
 	"polkadot-sdk/std",
 	"scale-info/std",
 	"serde_json/std",
