Comment out dev deps

--- a/substrate/client/transaction-pool/Cargo.toml
+++ b/substrate/client/transaction-pool/Cargo.toml
@@ -64,4 +64,4 @@ tokio = { workspace = true, features = ["rt-multi-thread"] }
 tracing-subscriber = { workspace = true }
 txtesttool = { workspace = true }
 zombienet-configuration = { workspace = true }
-zombienet-sdk = { workspace = true }
+# zombienet-sdk = { workspace = true }
