--- a/.github/workflows/tests-evm.yml
+++ b/.github/workflows/tests-evm.yml
@@ -37,13 +37,13 @@ jobs:
       - name: script
         run: |
           forklift cargo build --locked --profile production -p pallet-revive-eth-rpc --bin eth-rpc
-          forklift cargo build -p staging-node-cli --bin substrate-node
+          forklift cargo build --locked --profile production -p revive-dev-node --bin revive-dev-node 
 
       - name: Checkout evm-tests
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           repository: paritytech/evm-test-suite
-          ref: 993256c758abdc38a2f3a721b7d1b9c8ae61e859
+          ref: 79144d85626f97e481b84a16d2b8f0813d03548b 
           path: evm-test-suite
 
       - uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5.0.0
@@ -64,7 +64,7 @@ jobs:
           resolc --version
 
           echo "Check that binaries are in place"
-          export NODE_BIN_PATH=$(readlink -f ../target/debug/substrate-node)
+          export NODE_BIN_PATH=$(readlink -f ../target/debug/revive-dev-node)
           export ETH_RPC_PATH=$(readlink -f ../target/production/eth-rpc)
           export RESOLC_PATH=/usr/local/bin/resolc
           echo $NODE_BIN_PATH $ETH_RPC_PATH $RESOLC_PATH
