--- a/.github/workflows/tests-evm.yml
+++ b/.github/workflows/tests-evm.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: script
         run: |
-          forklift cargo build --locked --profile production -p pallet-revive-eth-rpc --bin eth-rpc
-          forklift cargo build --locked --profile production -p revive-dev-node --bin revive-dev-node 
+          forklift cargo build --locked --release -p pallet-revive-eth-rpc --bin eth-rpc
+          forklift cargo build --locked --release -p revive-dev-node --bin revive-dev-node
 
       - name: Checkout evm-tests
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
