--- a/substrate/frame/revive/dev-node/runtime/Cargo.toml
+++ b/substrate/frame/revive/dev-node/runtime/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "revive-dev-runtime"
 description = "A solochain dev runtime for revive."
-version = "0.0.0"
+version = "0.1.0"
+license = "Apache-2.0"
 authors.workspace = true
 homepage.workspace = true
 repository.workspace = true
