--- a/substrate/frame/revive/rpc/Cargo.toml
+++ b/substrate/frame/revive/rpc/Cargo.toml
@@ -12,6 +12,9 @@ default-run = "eth-rpc"
 [lints]
 workspace = true
 
+[package.metadata.polkadot-sdk]
+exclude-from-umbrella = true
+
 [[bin]]
 name = "eth-rpc"
 path = "src/main.rs"
@@ -56,3 +59,6 @@ substrate-cli-test-utils = { workspace = true }
 
 [build-dependencies]
 git2 = { workspace = true }
+revive-dev-runtime = { workspace = true, default-features = true }
+sp-io = { workspace = true, default-features = true }
+sp-runtime = { workspace = true, default-features = true }
