--- a/substrate/frame/revive/Cargo.toml
+++ b/substrate/frame/revive/Cargo.toml
@@ -2,7 +2,7 @@
 name = "pallet-revive"
 version = "0.1.0"
 authors.workspace = true
-edition.workspace = true
+edition = "2024"
 license = "Apache-2.0"
 homepage.workspace = true
 repository.workspace = true
