DYLD_LIBRARY_PATH

--- a/.github/workflows/tests-misc.yml
+++ b/.github/workflows/tests-misc.yml
@@ -352,6 +352,7 @@ jobs:
     if: ${{ needs.preflight.outputs.changes_rust }}
     env:
       SKIP_WASM_BUILD: 1
+      DYLD_LIBRARY_PATH: "/Library/Developer/CommandLineTools/usr/lib:${DYLD_LIBRARY_PATH}"
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - name: Set rust version from env file
@@ -359,6 +360,7 @@ jobs:
           RUST_VERSION=$(cat .github/env | sed -E 's/.*ci-unified:([^-]+)-([^-]+).*/\2/')
           echo $RUST_VERSION
           echo "RUST_VERSION=${RUST_VERSION}" >> $GITHUB_ENV
+          echo $DYLD_LIBRARY_PATH
       - name: Set up Homebrew
         uses: Homebrew/actions/setup-homebrew@1ccc07ccd54b6048295516a3eb89b192c35057dc # master from 12.09.2024
       - name: Install rust ${{ env.RUST_VERSION }}
