Non-teleportable Foreign Assets on Asset Hub
_Context_

Asset Hub currently supports registering following types of assets:
1. Local Assets (also called trust-based assets), with `u32` asset ID,
asset creatable by Signed accounts and managed by `PalletInstance(50)`.
2. Foreign Assets, `Location` as asset ID, creatable only by external
locations over XCM.

For "foreign assets", the current code assumes and enforces that the
asset is teleportable with its original location/creator.

Some ecosystem parachains would want to register foreign assets on Asset Hub,
but not also have them teleportable, not have Asset Hub act as a reserve for
the asset. Multiple reserve locations adds reserve management overhead for
teams, and some don't want to do it.

E.g. for HOLLAR to be registered to Asset Hub, Hydration wants Asset Hub to
allow reserve-based foreign assets.

_Solution_

This PR adds a new `pallet-assets-reserves` that can be used to configure
the trusted reserves (as seen by the local chain) on a per-asset basis.

It also adds runtime machinery to use the assets reserves information when
reasoning about XCM teleports and XCM reserve-based transfers.

For each asset, the base chain described in its asset id location is
considered a default reserve chain without it having to be explicitly
configured.
Any other chain that should be assumed as a trusted reserve needs to be
marked as such in `pallet-assets-reserves` by the asset's Owner or Admin.
When the local chain is also marked as a reserve (`Here` is added to the
list of reserves) for a particular asset, then that asset can be teleported
between the local chain and any other reserve location.

By default, on asset creation, no explicit reserve chain is configured,
this results in foreign assets to be reserve-based assets by default and
not teleportable. To make them teleportable with their origin chain,
`Here` needs to be added as a reserve (local chain to also be a reserve).

_AH considerations_

Since there are alread

--- a/umbrella/Cargo.toml
+++ b/umbrella/Cargo.toml
@@ -61,6 +61,7 @@ std = [
 	"pallet-assets-freezer?/std",
 	"pallet-assets-holder?/std",
 	"pallet-assets-precompiles?/std",
+	"pallet-assets-reserves?/std",
 	"pallet-assets?/std",
 	"pallet-atomic-swap?/std",
 	"pallet-aura?/std",
@@ -260,6 +261,7 @@ runtime-benchmarks = [
 	"pallet-assets-freezer?/runtime-benchmarks",
 	"pallet-assets-holder?/runtime-benchmarks",
 	"pallet-assets-precompiles?/runtime-benchmarks",
+	"pallet-assets-reserves?/runtime-benchmarks",
 	"pallet-assets?/runtime-benchmarks",
 	"pallet-babe?/runtime-benchmarks",
 	"pallet-bags-list?/runtime-benchmarks",
@@ -394,6 +396,7 @@ try-runtime = [
 	"pallet-assets-freezer?/try-runtime",
 	"pallet-assets-holder?/try-runtime",
 	"pallet-assets-precompiles?/try-runtime",
+	"pallet-assets-reserves?/try-runtime",
 	"pallet-assets?/try-runtime",
 	"pallet-atomic-swap?/try-runtime",
 	"pallet-aura?/try-runtime",
@@ -604,6 +607,7 @@ runtime-full = [
 	"pallet-assets-freezer",
 	"pallet-assets-holder",
 	"pallet-assets-precompiles",
+	"pallet-assets-reserves",
 	"pallet-atomic-swap",
 	"pallet-aura",
 	"pallet-authority-discovery",
@@ -1286,6 +1290,11 @@ path = "../substrate/frame/assets-holder"
 default-features = false
 optional = true
 path = "../substrate/frame/assets/precompiles"
+
+[dependencies.pallet-assets-reserves]
+default-features = false
+optional = true
+path = "../substrate/frame/assets-reserves"
 
 [dependencies.pallet-atomic-swap]
 default-features = false
