--- a/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
@@ -38,6 +38,7 @@ pallet-asset-rewards = { workspace = true }
 pallet-assets = { workspace = true }
 pallet-assets-freezer = { workspace = true }
 pallet-assets-precompiles = { workspace = true }
+pallet-assets-reserves = { workspace = true }
 pallet-aura = { workspace = true }
 pallet-authorship = { workspace = true }
 pallet-bags-list = { workspace = true }
@@ -167,6 +168,7 @@ runtime-benchmarks = [
 	"pallet-asset-rewards/runtime-benchmarks",
 	"pallet-assets-freezer/runtime-benchmarks",
 	"pallet-assets-precompiles/runtime-benchmarks",
+	"pallet-assets-reserves/runtime-benchmarks",
 	"pallet-assets/runtime-benchmarks",
 	"pallet-bags-list/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
@@ -236,6 +238,7 @@ try-runtime = [
 	"pallet-asset-rewards/try-runtime",
 	"pallet-assets-freezer/try-runtime",
 	"pallet-assets-precompiles/try-runtime",
+	"pallet-assets-reserves/try-runtime",
 	"pallet-assets/try-runtime",
 	"pallet-aura/try-runtime",
 	"pallet-authorship/try-runtime",
@@ -315,6 +318,7 @@ std = [
 	"pallet-asset-rewards/std",
 	"pallet-assets-freezer/std",
 	"pallet-assets-precompiles/std",
+	"pallet-assets-reserves/std",
 	"pallet-assets/std",
 	"pallet-aura/std",
 	"pallet-authorship/std",
