--- a/cumulus/parachains/runtimes/assets/common/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/common/Cargo.toml
@@ -22,6 +22,7 @@ frame-support = { workspace = true }
 frame-system = { workspace = true }
 pallet-asset-conversion = { workspace = true }
 pallet-assets = { workspace = true }
+pallet-assets-reserves = { workspace = true }
 pallet-revive = { workspace = true }
 pallet-revive-uapi = { workspace = true, features = ["scale"] }
 sp-api = { workspace = true }
@@ -48,6 +49,7 @@ std = [
 	"frame-system/std",
 	"pallet-asset-conversion/std",
 	"pallet-assets/std",
+	"pallet-assets-reserves/std",
 	"pallet-revive/std",
 	"pallet-xcm/std",
 	"parachains-common/std",
@@ -66,6 +68,7 @@ runtime-benchmarks = [
 	"frame-system/runtime-benchmarks",
 	"pallet-asset-conversion/runtime-benchmarks",
 	"pallet-assets/runtime-benchmarks",
+	"pallet-assets-reserves/runtime-benchmarks",
 	"pallet-revive/runtime-benchmarks",
 	"pallet-xcm/runtime-benchmarks",
 	"parachains-common/runtime-benchmarks",
@@ -79,6 +82,7 @@ try-runtime = [
 	"frame-system/try-runtime",
 	"pallet-asset-conversion/try-runtime",
 	"pallet-assets/try-runtime",
+	"pallet-assets-reserves/try-runtime",
 	"pallet-revive/try-runtime",
 	"pallet-xcm/try-runtime",
 	"parachains-common/try-runtime",
