add some tests for connect/disconnect
Signed-off-by: Andrei Sandu <andrei-mihail@parity.io>

--- a/polkadot/node/network/collator-protocol/Cargo.toml
+++ b/polkadot/node/network/collator-protocol/Cargo.toml
@@ -49,6 +49,8 @@ sp-keyring = { workspace = true, default-features = true }
 
 polkadot-node-subsystem-test-helpers = { workspace = true }
 polkadot-primitives-test-helpers = { workspace = true }
+itertools = { workspace = true }
+
 
 [features]
 default = []
