--- a/.github/workflows/build-publish-images.yml
+++ b/.github/workflows/build-publish-images.yml
@@ -690,8 +690,12 @@ jobs:
       - build-linux-substrate
       - build-templates-node
     if: always() && !cancelled()
+    outputs:
+      build_success: ${{ steps.check_success.outputs.build_success }}
     steps:
-      - run: |
+      - name: Check build success
+        id: check_success
+        run: |
           tee resultfile <<< '${{ toJSON(needs) }}'
           FAILURES=$(cat resultfile | grep '"result": "failure"' | wc -l)
           if [ $FAILURES -gt 0 ]; then
@@ -699,4 +703,35 @@ jobs:
             exit 1
           else
             echo '### Good job! All the required jobs passed 🚀' >> $GITHUB_STEP_SUMMARY
+            echo "build_success=true" >> $GITHUB_OUTPUT
           fi
+
+  # Trigger zombienet tests after successful build
+  # This avoids API rate limits and ensures tests only run when builds succeed
+  trigger-zombienet-polkadot:
+    needs: [preflight, confirm-required-build-jobs-passed]
+    if: ${{ needs.confirm-required-build-jobs-passed.outputs.build_success == 'true' && !github.event.pull_request.draft }}
+    uses: ./.github/workflows/zombienet_polkadot.yml
+    with:
+      build_run_id: ${{ github.run_id }}
+
+  trigger-zombienet-cumulus:
+    needs: [preflight, confirm-required-build-jobs-passed]
+    if: ${{ needs.confirm-required-build-jobs-passed.outputs.build_success == 'true' && !github.event.pull_request.draft }}
+    uses: ./.github/workflows/zombienet_cumulus.yml
+    with:
+      build_run_id: ${{ github.run_id }}
+
+  trigger-zombienet-substrate:
+    needs: [preflight, confirm-required-build-jobs-passed]
+    if: ${{ needs.confirm-required-build-jobs-passed.outputs.build_success == 'true' && !github.event.pull_request.draft }}
+    uses: ./.github/workflows/zombienet_substrate.yml
+    with:
+      build_run_id: ${{ github.run_id }}
+
+  trigger-zombienet-parachain-template:
+    needs: [preflight, confirm-required-build-jobs-passed]
+    if: ${{ needs.confirm-required-build-jobs-passed.outputs.build_success == 'true' && !github.event.pull_request.draft }}
+    uses: ./.github/workflows/zombienet_parachain-template.yml
+    with:
+      build_run_id: ${{ github.run_id }}
