--- a/.github/workflows/zombienet_polkadot.yml
+++ b/.github/workflows/zombienet_polkadot.yml
@@ -1,6 +1,17 @@
 name: Zombienet Polkadot
 
 on:
+  workflow_call:
+    inputs:
+      build_run_id:
+        type: string
+        description: "Build run ID from the build workflow."
+        required: true
+      test_pattern:
+        type: string
+        description: "Run tests which names match this pattern (also flaky)"
+        default: ""
+        required: false
   workflow_dispatch:
     inputs:
       test_pattern:
@@ -41,6 +52,7 @@ jobs:
     with:
       tests_yaml: .github/zombienet-tests/zombienet_polkadot_tests.yml
       test_pattern: ${{ inputs.test_pattern }}
+      build_run_id: ${{ inputs.build_run_id }}
 
   zombienet-polkadot-tests:
     name: ${{ matrix.test.job-name }}
