--- a/.github/actions/zombienet/action.yml
+++ b/.github/actions/zombienet/action.yml
@@ -61,6 +61,7 @@ runs:
         k8s_auth
 
     - name: zombie_test
+      timeout-minutes: 60
       shell: bash
       env:
         TEST_DEFINITION: ${{ inputs.test-definition }}
